infra/k8s.dev/auth-mongo.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tckhb-auth-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tckhb-auth-mongo
  template:
    metadata:
      labels:
        app: tckhb-auth-mongo
    spec:
      containers:
      - name: auth-mongo
        image: mongo
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: tckhb-auth-mongo-clusterip-service
spec:
  selector:
    app: tckhb-auth-mongo
  ports:
  - name: db 
    protocol: TCP
    port: 27017
    targetPort: 27017
