infra/k8s.dev/tickets.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tckhb-tickets-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tckhb-tickets
  template:
    metadata:
      labels:
        app: tckhb-tickets
    spec:
      containers:
        - name: tckhb-tickets-container
          image: erfanseidipoor/tckhb-tickets
          imagePullPolicy: Never
          resources:
            limits:
              memory: '500Mi'
              cpu: '500m'
          ports:
            - containerPort: 8003

---
apiVersion: v1
kind: Service
metadata:
  name: tckhb-tickets-clisterip-service
spec:
  type: ClusterIP
  selector:
    app: tckhb-tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 8003
      targetPort: 8003

---
# apiVersion: v1
# kind: Service
# metadata:
#   name: tckhb-tickets-nodeport-service
# spec:
#   type: NodePort
#   selector:
#     app: tckhb-tickets
#   ports:
#     - name: tickets-nodeport
#       protocol: TCP
#       port: 8003
#       targetPort: 8003
